--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "A LOD generator for point cloud files"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.81"
+anyhow = "~1.0.81"
 clap = { version = "4.5.3", features = ["derive"] }
 image = { version = "0.24.8", features = ["webp-encoder"] }
 las = "0.8.2"
