--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-authors = ["Masatatsu Nakamura <masatatsu.nakamura@gmail.com>"]
+# authors = []
 edition = "2021"
 name = "pcd-lod"
 version = "0.1.0"
 description = "A LOD generator for point cloud files"
+license = "MIT"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
