--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 [dependencies]
 anyhow = "~1.0.81"
 clap = { version = "4.5.3", features = ["derive"] }
-image = { version = "0.24.8", features = ["webp-encoder"] }
-nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
+image = { version = "0.25.2", features = ["webp"] }
+nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
 rand = { version = "0.8" }
-rayon = "1.6.1"
+rayon = "1.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
