--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bevy = { version = "0.14.2", optional = true }
 bevy_infinite_grid = { version = "0.13.0", optional = true }
 bevy_panorbit_camera = { version = "0.19.3", optional = true }
 bevy_points = { version = "0.6.0", optional = true }
+bevy_polyline = { version = "0.10", optional = true }
 
 [dev-dependencies]
 serial_test = "*"
@@ -36,7 +37,8 @@ bevy = [
   "dep:bevy",
   "dep:bevy_infinite_grid",
   "dep:bevy_panorbit_camera",
-  "dep:bevy_points"
+  "dep:bevy_points",
+  "dep:bevy_polyline"
 ]
 
 [[example]]
