--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,16 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "~1.0.81"
-clap = { version = "4.5.3", features = ["derive"] }
-image = { version = "0.25.2", features = ["webp"] }
-nalgebra = { version = "0.33.0", features = ["serde-serialize", "glam027", "glam028"] }
+clap = { version = "4.5.20", features = ["derive"] }
+image = { version = "0.25.4", features = ["webp"] }
+nalgebra = { version = "0.33.1", features = ["serde-serialize", "glam027", "glam028"] }
 num-traits = "0.2.19"
 itertools = { version = "0.13.0" }
 rand = { version = "0.8" }
 rayon = "1.10.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.132"
+tokio = { version = "1.40.0", features = ["full"] }
 bevy = { version = "0.14.2", optional = true }
 bevy_infinite_grid = { version = "0.13.0", optional = true }
 bevy_panorbit_camera = { version = "0.19.3", optional = true }
@@ -31,8 +31,8 @@ bevy_polyline = { version = "0.10", optional = true }
 serial_test = "*"
 
 [features]
-default = []
-# default = ["bevy"] # for debugging example
+# default = []
+default = ["bevy"] # for debugging example
 bevy = [
   "dep:bevy",
   "dep:bevy_infinite_grid",
@@ -44,6 +44,11 @@ bevy = [
 [[example]]
 name = "sampling"
 path = "examples/sampling.rs"
+required-features = ["bevy"]
+
+[[example]]
+name = "parallel_sampling"
+path = "examples/parallel_sampling.rs"
 required-features = ["bevy"]
 
 [[example]]
